add all simulations

--- a/generate_RDD_cond.ipynb
+++ b/generate_RDD_cond.ipynb
@@ -53,14 +53,20 @@
     "importlib.reload(wgan)\n",
     "#assert torch.cuda.is_available()\n",
     "\n",
-    "# Y | X, t\n",
+    "#Generate X\n",
     "cont1 = [\"x\"] \n",
-    "cont2 = [\"y\"] \n",
-    "text2 = [\"x\"] \n",
+    "# Y | X \n",
+    "cont2y = [\"y\"] \n",
+    "text2y = [\"x\"] \n",
+    "\n",
+    "# \n",
+    "\n",
     "lbound1 = {\"x\": -1}\n",
     "ubound1 = {\"x\": 1} \n",
     "lbound2 = {\"y\": 0}\n",
-    "ubound2 = {\"y\": 1}"
+    "ubound2 = {\"y\": 1}\n",
+    "\n",
+    "# T | X "
    ]
   },
   {
