remove papers and add more kolesar papers

--- a/write/sample.bib
+++ b/write/sample.bib
@@ -9,6 +9,38 @@
   year={2019},
   publisher={Taylor \& Francis}
 }
+@article{kolesar2018inference,
+  title={Inference in regression discontinuity designs with a discrete running variable},
+  author={Koles{\'a}r, Michal and Rothe, Christoph},
+  journal={American Economic Review},
+  volume={108},
+  number={8},
+  pages={2277--2304},
+  year={2018}
+}
+
+@article{armstrong2020simple,
+  title={Simple and honest confidence intervals in nonparametric regression},
+  author={Armstrong, Timothy B and Koles{\'a}r, Michal},
+  journal={Quantitative Economics},
+  volume={11},
+  number={1},
+  pages={1--39},
+  year={2020},
+  publisher={Wiley Online Library}
+}
+
+
+@article{armstrong2020simple,
+  title={Simple and honest confidence intervals in nonparametric regression},
+  author={Armstrong, Timothy B and Koles{\'a}r, Michal},
+  journal={Quantitative Economics},
+  volume={11},
+  number={1},
+  pages={1--39},
+  year={2020},
+  publisher={Wiley Online Library}
+}
 
 @article{matsudaira2008mandatory,
   title={Mandatory summer school and student achievement},
