--- a/write/sample.bib
+++ b/write/sample.bib
@@ -224,6 +224,23 @@
   year={2010}
 }
 
+@book{wood2017generalized,
+  title={Generalized additive models: an introduction with R},
+  author={Wood, Simon N},
+  year={2017},
+  publisher={CRC press}
+}
+
+@article{armstrong2018optimal,
+  title={Optimal inference in a class of regression models},
+  author={Armstrong, Timothy B and Koles{\'a}r, Michal},
+  journal={Econometrica},
+  volume={86},
+  number={2},
+  pages={655--683},
+  year={2018},
+  publisher={Wiley Online Library}
+}
 @article{armstrong2020robust,
   title={Robust Empirical Bayes Confidence Intervals},
   author={Armstrong, Timothy B and Koles{\'a}r, Michal and Plagborg-M{\o}ller, Mikkel},
